Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3453. Correct the downloaded ATS dag data location for analyzer.
  TEZ-3449. Fix Spelling typos.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop
  TEZ-3330. Propagate additional config parameters when running MR jobs via Tez.
  TEZ-3335. DAG client thinks app is still running when app status is null
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3460. Fix precommit release audit warning.
  TEZ-3368. NPE in DelayedContainerManager
  TEZ-3440. Shuffling to memory can get out-of-sync when fetching multiple compressed map outputs
  TEZ-3429. Set reconfigureDoneTime on VertexConfigurationDoneEvent properly.
  TEZ-3000. Fix TestContainerReuse.
  TEZ-3436. Check input and output count before start in MapProcessor.
  TEZ-3163. Reuse and tune Inflaters and Deflaters to speed DME processing
  TEZ-3434. Add unit tests for flushing of recovery events.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3404. Move blocking call for YARN Timeline domain creation from client side to AM.
  TEZ-3272. Add AMContainerImpl and AMNodeImpl to StateMachine visualization list.
  TEZ-3284. Synchronization for every write in UnOrderedKVWriter
  TEZ-3426. Second AM attempt launched for session mode and recovery disabled for certain cases
  TEZ-3230. Implement vertex manager and edge manager of cartesian product edge.
  TEZ-3326. Display JVM system properties in AM and task logs.
  TEZ-3009. Errors that occur during container task acquisition are not logged.
  TEZ-2852. TestVertexImpl fails due to race in AsyncDispatcher.
  TEZ-3395. Refactor ShuffleVertexManager to make parts of it re-usable in other plugins.
  TEZ-3413. ConcurrentModificationException in HistoryEventTimelineConversion for AppLaunchedEvent.
  TEZ-3352. MRInputHelpers getStringProperty() should not fail if property value is null.